appId: trendyol.com
---
- launchApp:
    clearState: true
- tapOn:
    id: buttonDismiss 
- tapOn: Arama
- tapOn: Marka, ürün veya kategori ara
- inputText: "kazak"
- pressKey: Enter
- tapOn:
    id: imageViewProduct
    index: 1 
- scroll
- tapOn: Sepete Ekle
- tapOn: Sepete Ekle
- doubleTapOn:
    point: 0%,5% 
- tapOn:
    id: image_add 
- tapOn:
    id: image_subtract 
- tapOn: Ürünü sil
- tapOn: Sil
- tapOn:
    id: buttonAction
- tapOn:
    id: imageViewIcon 
- tapOn:
    id: loginButton
- tapOn: Kapat 
- tapOn:
    id: editTextEmail
- inputText: "ahmetcan54677@gmail.com"
- tapOn:
    id: buttonContinue
- tapOn:
    id: editTextPassword
- tapOn:
    id: autofill_dialog_no 
    optional: true
- inputText: "Kayseri38tr."
- tapOn:
    id: buttonLogin
- tapOn:
   id: autofill_save_no
   optional: true
- tapOn:
    id: searchBarCategoryImageView
- tapOn:
    id: mainCategoryGridItem_2
- tapOn:
    id: CategoryGridItemImage
    index: 3
- tapOn:
    id: textViewOpenFilterSearchFilterSortingName 
- tapOn:
    id: radioButtonSortingTypeItem
    index: 3 
- tapOn:
    id: openFilterDropDownIcon
- tapOn:
    id: checkBoxOpenFilterAttribute
    index: 0
- tapOn:
    id: buttonApplyFilterListing
- tapOn:
    id: textViewOpenFilterName
    index: 1
- tapOn:
    id: checkBoxOpenFilterAttribute
    index: 13
- tapOn: Uygula
- tapOn:
    id: imageViewProduct
    index: 1
- tapOn:
    id: imageViewFavorite 
- swipe: 
    from:
      id: layoutStamp
    start: "90%, 40%"
    end: "10%, 40%"
    duration: 500
- swipe: 
    start: "10%, 40%"
    end: "90%, 40%"
    duration: 400
- scroll
- tapOn:
    id: cityAndDistrictText
- tapOn:
    id: cityText
- tapOn: İl ara
- inputText: "istanbul"
- tapOn:
    text: İstanbul
    index: 1
- tapOn:
    id: continueButtonText
- tapOn: İlçe ara
- inputText: "Esenler"
- tapOn:
    text: Esenler
    index: 1
- tapOn:
    id: continueButtonText
- tapOn:
    id: saveButtonText
- tapOn:
    id: primaryButtonText
- tapOn:
    id: primaryButtonText
- tapOn:
    id: UseDiscountCodeItemTestTag
- tapOn:
    id: "autofill_dialog_no"
    optional: true
- inputText: "Test123"
- tapOn: Uygula
- tapOn:
    id: composeViewApproveBasket
- tapOn: Trendyol Plus’ı Almadan Devam Et
- tapOn:
    id: editTextOwnerName
- inputText: "Enes"
- tapOn:
    id: editTextOwnerSurname
- inputText: "Gunes"
- tapOn:
    id: editTextPhoneNumber
- inputText: "05554443322"
- tapOn:
    id: dropDownComponentcityId
- tapOn:
    id: textInputEditTextSearch
- inputText: "istanbul"
- tapOn:
    text: İstanbul
    index: 1
- tapOn:
    id: textInputEditTextSearch
- inputText: "esenler"
- tapOn:
    text: esenler
    index: 1
- tapOn:
    id: textInputEditTextSearch
- inputText: "davut"
- tapOn: Davutpaşa Mah
- scrollUntilVisible:
    element:
      id: buttonSave
- tapOn: Adres
- inputText: "Maestro E2E Aututomation"
- back
- tapOn:
    id: freeTextComponentaddressName
- tapOn:
    id: "autofill_dialog_no"
    optional: true
- inputText: ${"Test" + Math.floor(Math.random() * 999 + 1)}
- back
- tapOn:
    id: buttonSave
- waitForAnimationToEnd:
    timeout: 2500
- back
- back
- tapOn:
    id: button1
- tapOn:
    id: "autofill_save_no"
    optional: true
- tapOn:
    id: imageViewDeleteProduct
- tapOn:
    id: textViewBasketRemoveAction
- tapOn:
    id: imageViewIcon
    index: 3
- tapOn:
    id: OnboardingPopUpCloseIcon
    optional: true
- tapOn:
    id: GenderSelectionDismissButton
    optional: true
- scrollUntilVisible:
    element:
      id: imageViewNavigationArrow
      index: 9
- tapOn:
    id: imageViewNavigationArrow
    index: 11
- tapOn:
    id: CloseIcon
    optional: true
- scrollUntilVisible:
    element:
      id: SettingsListItem
      index: 9
- tapOn: Çıkış Yap
- tapOn:
    id: button1
